<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layout_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:baselineAligned="false">
        <!--男-->
        <LinearLayout
            android:id="@+id/sex_classify_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sex_classify_normal_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/sex_classify_layout_padding"
            android:paddingTop="@dimen/sex_classify_layout_padding"
            android:paddingLeft="@dimen/sex_classify_margin_4"
            android:paddingRight="@dimen/sex_classify_margin_4"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/boy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_1"
                android:text="@string/sex_classify_man_like"
                android:textColor="@color/c04_themes_color"
                android:textSize="@dimen/sex_classify_font_h2"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_2"
                android:text="@string/sex_classify_man_desc1"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_man_desc2"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_man_desc3"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_more"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

        </LinearLayout>
        <!--女-->
        <LinearLayout
            android:id="@+id/sex_classify_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sex_classify_margin_4"
            android:background="@drawable/sex_classify_pressed_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/sex_classify_font_h2"
            android:paddingTop="@dimen/sex_classify_font_h2"
            android:paddingLeft="@dimen/sex_classify_margin_4"
            android:paddingRight="@dimen/sex_classify_margin_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/girl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_1"
                android:text="@string/sex_classify_women_like"
                android:textColor="@color/c04_themes_color"
                android:textSize="@dimen/sex_classify_font_h2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_2"
                android:text="@string/sex_classify_women_desc1"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_women_desc2"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_women_desc3"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sex_classify_margin_3"
                android:text="@string/sex_classify_more"
                android:textColor="@color/c06_themes_color"
                android:textSize="@dimen/sex_classify_font_content"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/sex_classify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/layout_sex"
        android:layout_marginBottom="30dp"
        android:text="@string/sex_classify_title"
        android:textColor="@color/c04_themes_color"
        android:textSize="@dimen/sex_classify_font_h1"
        />

    <Button
        android:id="@+id/sex_classify_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_sex"
        android:layout_centerHorizontal="true"
        style="@style/RedButtonStyle"
        android:layout_marginTop="34dp"
        android:text="@string/sex_classify_start"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        />


</RelativeLayout>
