<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/migrate_success"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/migrate_dialog_title"/>

    <TextView
        android:id="@+id/tv_migrate_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/migrate_fail"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="客服QQ：2724621953"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="12dp"
        android:background="@drawable/selector_common_btn_rad_bg"
        android:text="@string/migrate_restart"
        android:textColor="@android:color/white"/>
</LinearLayout>
