<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/migrate_success"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/migrate_dialog_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:text="@string/migrate_success"
        />

    <TextView
        android:id="@+id/tv_dialog_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:text="本次共为您添加：23本收藏作品23445阅币＋16奖励阅币323条订阅记录34条打赏记录"/>


    <Button
        android:id="@+id/btn_start_read"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="12dp"
        android:background="@drawable/selector_common_btn_rad_bg"
        android:text="@string/migrate_read_start"
        android:textColor="@android:color/white"/>
</LinearLayout>
